[package]
name = "serde_x12"
version = "0.7.2"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
keywords = ["edi","x12","serde"]
repository = "https://github.com/apimeister/serde_x12/"
documentation = "https://docs.rs/serde_x12/"
description = "A Serde for ASC X12 EDI documents."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
x12-types = { version = "0.8" }
nom = "7"

[features]
debug = []